ARR Stack/Sonarr/sonarr.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arr-stack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr-stack
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits: 
            memory: "512Mi"
            cpu: "250m" 
        ports: 
          - containerPort: 8989
        volumeMounts:
        - mountPath: /config
          name: data
        - mountPath: /media
          name: smb
        - mountPath: /data
          name: smbdownload
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sonarr-claim
      - name: smb
        persistentVolumeClaim:
          claimName: sonarr-smb
      - name: smbdownload
        persistentVolumeClaim:
          claimName: sonarrdownload-smb
