ARR Stack/Sonarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: arr-stack
spec:
  selector:
    app: sonarr
  ports:
    - protocol: TCP
      port: 8989
      targetPort: 8989
